# python-sympy-desmos

./: pyproject.toml
examples/: basic.py  example.py
src/sympy_desmos/: __init__.py  desmoshtml.py
